[package]
name = "sn_url"
version = "1.1.0"
description = "Safe URL"
authors = [ "MaidSafe Developers <dev@maidsafe.net>" ]
license = "MIT OR BSD-3-Clause"
repository = "https://github.com/maidsafe/sn_url"
documentation = "https://docs.rs/sn_url"
keywords = [ "Safe", "Network", "SafeNetwork", "SafeUrl", "XorUrl" ]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
log = "~0.4"
multibase = "~0.9"
serde = "1.0.123"
sn_data_types = "~0.18"
thiserror = "1.0.23"
uhttp_uri = "~0.5"
url = "2.2.0"
urlencoding = "1.1.1"
xor_name = "1"

[dev-dependencies]
anyhow = "1.0.38"
rand = "~0.7"
