[package]
name = "sn_url"
version = "1.1.5"
description = "Safe URL"
authors = [ "MaidSafe Developers <dev@maidsafe.net>" ]
license = "MIT OR BSD-3-Clause"
repository = "https://github.com/maidsafe/sn_url"
documentation = "https://docs.rs/sn_url"
keywords = [ "Safe", "Network", "SafeNetwork", "SafeUrl", "XorUrl" ]
edition = "2018"

[dependencies]
lazy_static = "1.4.0"
multibase = "~0.9"
serde = "1.0.137"
thiserror = "1.0.31"
tracing = "~0.1.34"
uhttp_uri = "~0.5"
url = "2.2.2"
urlencoding = "2.1.0"
xor_name = "4.0.1"

[dev-dependencies]
color-eyre = "~0.6"
rand = "~0.8.5"
